Creating a working copy of rock-paper-scissors

--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="script.js"></script>
+        <link rel="stylesheet" type="text/css" href="resetcss.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-
+        <div id="container">
+            <div id="left">
+                <img data-value="rock"  id="rock" class="left" src="images/the-rock.png" alt="Rock">
+                <img data-value="scissors" id="scissors" class="left" src="images/scissors.jpg" alt="Scissors">
+                <img data-value="paper" id="paper" class="left" src="images/toiletpaper.jpg"alt="Paper">
+            </div>
+            <div id="right">
+                <img id="rock" class="right" src="images/the-rock.png" alt="Rock">
+                <img id="scissors" class="right" src="images/scissors.jpg" alt="Scissors">
+                <img id="paper" class="right" src="images/toiletpaper.jpg" alt="Paper">
+            </div>
+        </div>
     </body>
+    <script src="scripts/script.js"></script>
 </html>
