--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
         <div id="container">
             <div id="left">
                 <img data-value="rock"  id="rock" class="left" src="images/the-rock.png" alt="Rock">
+                <p> The Rock </p>
                 <img data-value="scissors" id="scissors" class="left" src="images/scissors.jpg" alt="Scissors">
+                <p> Scissors </p>
                 <img data-value="paper" id="paper" class="left" src="images/toiletpaper.jpg"alt="Paper">
+                <p> Paper </p>
             </div>
-            <div id="right">
+            <!--  <div id="right">
                 <img id="rock" class="right" src="images/the-rock.png" alt="Rock">
                 <img id="scissors" class="right" src="images/scissors.jpg" alt="Scissors">
                 <img id="paper" class="right" src="images/toiletpaper.jpg" alt="Paper">
             </div>
+        </div> -->
+        <div class="results">
+
         </div>
     </body>
     <script src="scripts/script.js"></script>
